# fractionalized-token

./: .gitignore  README copy.md  README.md  cabal.project  fractionalized-nft.cabal  token-marketplace.cabal
.devcontainer/: docker-compose.yml
app/: FNFTApp.hs  MarketplaceApp.hs  ParameterizedApp.hs
built-contracts/: FNFT-parameterized-contract.json  marketplace-contract.json  marketplace-parameterized-contract.json  minting-parameterized-contract.json
doc/: FRACTIONAL NFT PROJECT Product requirement.pptx
src/: FNFTContract.hs  Free.hs  GeneralParams.hs  MarketplaceContract.hs  MintingContract.hs  Utility.hs
tests/: ContractTest.hs
