Cabal-Version:      2.4
Name:               fractionalized-nft
Version:            0.1.0.0
Author:             Cong Le
Maintainer:         congle@blockchainlabs.asia
Build-Type:         Simple
Copyright:          © 2022 Cong Le
License:            Apache-2.0

library
  hs-source-dirs:      src
  exposed-modules:     MarketplaceContract
                     , GeneralParams
                     , Utility
                     , Free
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , formatting
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas
                       -fno-omit-interface-pragmas -fno-strictness 
                       -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                       -fplugin-opt PlutusTx.Plugin:defer-errors

executable marketplace-contract
  main-is:            MarketplaceApp.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas -fno-strictness 
                      -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                      -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , base                ^>=4.14.1.0
    , bytestring
    , containers
    , cardano-api
    , data-default
    , formatting
    , freer-extras
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx-constraints
    , plutus-script-utils
    , plutus-tx-plugin
    , plutus-tx
    , text
    , serialise
    , aeson
    , fractionalized-nft

executable fractionalized-nft-parameterized
  main-is:            ParameterizedApp.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas -fno-strictness 
                      -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                      -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , base                ^>=4.14.1.0
    , bytestring
    , containers
    , cardano-api
    , data-default
    , formatting
    , freer-extras
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx-constraints
    , plutus-script-utils
    , plutus-tx-plugin
    , plutus-tx
    , text
    , serialise
    , aeson
    , fractionalized-nft


test-suite test
    main-is:            ContractTest.hs
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    default-language:   Haskell2010
    ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas
                        -fno-omit-interface-pragmas -fno-strictness 
                        -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                        -fplugin-opt PlutusTx.Plugin:defer-errors
    build-depends:
      , base                ^>=4.14.1.0
      , bytestring
      , containers
      , cardano-api
      , data-default
      , formatting
      , freer-extras
      , plutus-contract
      , plutus-ledger
      , plutus-ledger-api
      , plutus-tx-constraints
      , plutus-script-utils
      , plutus-tx-plugin
      , plutus-tx
      , text
      , serialise
      , aeson
      , fractionalized-nft
      , tasty
      , tasty-quickcheck
      , plutus-simple-model
      , QuickCheck